--- a/achievments.html
+++ b/achievments.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar bg-light navbar-expand-lg fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="/assets/HS-logo-nobg.png " alt="Rashaya Highschool"
+            <a class="navbar-brand" href="index.html"><img src="/assets/HS-logo-nobg.png" alt="Rashaya Highschool"
                     class="img-fluid mx-5" width="60px" ></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
                 aria-controls="offcanvasNavbar">
@@ -27,13 +27,13 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 mx-5">
                         <li class="nav-item mx-1">
-                            <a class="nav-link active mx-lg-2" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active mx-lg-2" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item mx-1">
                             <a class="nav-link mx-lg-2" href="about.html">About</a>
                         </li>
                         <li class="nav-item mx-1">
-                            <a class="nav-link mx-lg-2" id="achievmentsNav" href="achievments.html">Achievments</a>
+                            <a class="nav-link mx-lg-2" id="achievmentsNav"  href="#">Achievments</a>
                         </li>
                         <li class="nav-item mx-1">
                             <a class="nav-link mx-lg-2" href="events.html">Events</a>
