--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
   
 
 <body>
+    <div  id="preloader" class=" align-items-center justify-content-center vh-100 vw-100 position-fixed top-0 start-0 bg-light ">
+        <br/><br/>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="loader16"></div>
+            </div>
+        </div>
+        <br/><br/>
+    </div>
+
     <nav class="navbar bg-light navbar-expand-lg fixed-top ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="/assets/HS-logo-nobg.png " alt="Rashaya Highschool"
