added events section

--- a/events.html
+++ b/events.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rashaya Highschool</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <link href="/css/mainmin.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+</head>
 <body>
     <nav class="navbar bg-light navbar-expand-lg fixed-top">
         <div class="container-fluid">
@@ -43,10 +44,39 @@
             </div>
         </div>
     </nav>
+    <div class="my-5 p-4 d-flex align-items-center" style="background-image: url(assets/nafda.jpg); background-size: cover; background-position: bottom; z-index: -1; height:70vh">
+        <div>
+          <h2 class="text-white text-shadow display-1 fw-bold">Annual Events</h2>
+        </div>
+    </div>
+    <section class="row justify-content-center" style="width:100%">
+        <div class="col-11">
+            <p class="lead fs-4 p-3">Rashaya Highschool holds various extracurricular events annually, ranging from sports tournaments and academic competitions to festivals and community service projects. These events not only foster a sense of friendship among students but also provide opportunities for personal growth, leadership development, and the exploration of diverse interests beyond the classroom.</p> 
+        </div>
+        <hr style="width:70%">
+    </section>
+    <section>
+        <div>
+            <div class="card m-5 bg-secondary mx-auto" style="width:70% ;height:40vh; z-index: -1;opacity:0.9">
+                <div class="ms-3 mt-3 text-white" style="width:60%">
+                <h2 class="card-title mb-4">Event Name</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero natus ut, quasi eaque, impedit, inventore nesciunt deserunt illo molestiae fugit iure incidunt iusto neque alias dolore officiis reprehenderit minus! Ipsum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur iure quas, minus nulla veniam aut ex libero. Repellendus, earum ut eius repudiandae assumenda aspernatur, voluptate tempore cumque optio eaque laboriosam.</p>
+                </div>
+                <div style="height: inherit;" class="position-absolute end-0 mt-3 me-2">
+                    <img src="assets/Nafda-2.jpg" alt="rhs placeholder" style="height: inherit;">
+                </div>
+            </div>
+            <div class="d-flex m-5 justify-content-around">
+                <img src="assets/RHS-trees.jpg" alt="placeholder" class="rounded" style="width:25%">
+                <img src="assets/RHS-trees.jpg" alt="placeholder" class="rounded" style="width:25%">
+                <img src="assets/RHS-trees.jpg" alt="placeholder" class="rounded" style="width:25%; height:200px">
+            </div>
+        </div>
+        
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    </head>
     <script src="script.js"></script>
 </body>
 
