--- a/achievments.html
+++ b/achievments.html
@@ -66,15 +66,13 @@
     </section>
     
     <section>
-        <div class="d-flex align-items-start justify-content-center " style="align-items:start;">
+        <div class="d-flex align-items-start justify-content-center flex-wrap" style="align-items:start;">
             <div style="width: 50%;"  class="d-flex  flex-column align-items-around ">
                 <h2 class="mx-5 align-top text-primary fs-1" ><span class="text-secondary">Celebrate</span> with us</h2>
                 <hr style="width: 40% ;height: 3px;" class="mx-5 bg-secondary my-2 ">
-                <p class="mx-5 mt-4 fs-4">As a center of academic excellence and vibrant extracurricular engagement, our school boasts an impressive record of local and national accolades. Our students not only excel in academic realms but also shine in diverse extracurricular activities, including sports, environmental sustainability initiatives, and various competitions, consistently bringing home top honors and showcasing their broad talents and commitment to excellence.
-
-                </p>
+                <p class="mx-5 mt-4 fs-4">As a center of academic excellence and vibrant extracurricular engagement, our school boasts an impressive record of local and national accolades. Our students not only excel in academic realms but also shine in diverse extracurricular activities, including sports, environmental sustainability initiatives, and various competitions, consistently bringing home top honors and showcasing their broad talents and commitment to excellence.</p>
             </div>
-            <img src="/assets/achievmentInjaz.jpg" alt="" style="height: 40%; width: 35%;">
+            <img src="/assets/achievmentInjaz.jpg" alt="" style="height: auto; width: 500px;">
             </div>
     </section>
     
